# finance_tracker

./: .bandit.yml  .dockerignore  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  add_bulk_dummy_data.py  cats.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  package-lock.json  pyproject.toml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
finance_tracker/: settings.py  urls.py
templates/: base.html
templates/transactions/: transaction_confirm_delete.html  transaction_form.html  transaction_list.html
transactions/: admin.py  models.py  serializers.py  urls.py  views.py
transactions/management/commands/: create_categories.py
transactions/migrations/: 0001_initial.py  0002_alter_transaction_linked_transaction.py  0002_category_remove_transaction_category_and_more.py  0002_currencycode_currencydata_alter_transaction_currency_and_more.py  0003_alter_branch_is_deleted_alter_category_is_deleted_and_more.py  0003_alter_tag_unique_together_transaction_tags_and_more.py  0003_alter_transaction_item.py  0004_alter_category_options.py  0004_category_parent_alter_category_name.py  0005_alter_category_unique_together.py  0005_transaction_created_at.py  0006_alter_category_name.py  0006_auto_20230902_1833.py  0007_alter_category_name_parentcategory_and_more.py  0007_alter_transaction_created_at.py  0008_alter_category_parent_category.py  0008_currency_vendor_transaction_currency_and_more.py  0009_alter_currency_options_alter_category_description_and_more.py  0009_rename_parent_category_category_parent_and_more.py  0010_transaction_brand.py  0010_transaction_user.py  0011_alter_transaction_tags.py  0011_alter_transaction_user.py  0012_alter_transaction_tags.py  0012_category_color.py  0013_alter_transaction_type_transactioncategory.py  0014_alter_transaction_type_delete_transactioncategory.py
transactions/tests/: factories.py  test_views.py
