[project]
name = "FinanceTracker"
version = "0.1.0"
description = "Personal finance tracker app"
authors = [{ name = "Iván González", email = "ivan.gonzalez.prz@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
keywords = ["finance", "tracker", "django", "react"]
# homepage = "https://github.com/igonzalezperez/finance_tracker"

dependencies = [
    "django>=4.2.5",
    "python-decouple>=3.8",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.2.0",
    "setuptools>=68.2.2",
    "bandit>=1.7.6",
]

[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pdm.dev-dependencies]
lint = [
    "black>=23.9.1",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "django-stubs>=4.2.4",
    "flake8>=6.1.0",
]
test = ["factory-boy>=3.3.0", "Faker>=19.6.2"]
api = ["drf-yasg>=1.21.7"]
debug = ["django-debug-toolbar>=4.2.0"]
dev = ["pre-commit>=3.4.0"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "finance_tracker.settings"

[tool.setuptools]
py-modules = []