[tool.poetry]
name = "finance-tracker"
version = "0.1.0"
description = "Personal finance tracker app"
authors = ["Iván González <ivan.gonzalez.prz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.2.5"
python-decouple = ">=3.8"
djangorestframework = ">=3.14.0"
setuptools = ">=68.2.2"
django-debug-toolbar = ">=4.2.0"
drf-yasg = ">=1.21.7"
django-cors-headers = ">=4.2.0"
psycopg2-binary = ">=2.9"
faker = ">=19.6.2"
factory-boy = ">=3.3.0"
gunicorn = ">=21.2.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.9.1"
isort = ">=5.12.0"
mypy = ">=1.5.1"
django-stubs = ">=4.2.4"
flake8 = ">=6.1.0"
pre-commit = ">=3.4.0"
bandit = ">=1.7.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "finance_tracker.settings"